--- a/league.html
+++ b/league.html
@@ -7,10 +7,44 @@
     <link href="css/styles.css" rel="stylesheet">
     <!-- jQuery UI CSS -->
     <link href="js/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 
 <body>
-	<h1>Sun Valley Softball League</h1>
+	<div class="container" id="LeagueWrapper">
+	<h1>  <i class="fas fa-sun"></i>   Sun Valley Softball League  <i class="fas fa-baseball-ball"></i></h1>
+		<div id="TeamList">
+			<ul>
+				<li class="TeamName">Sluggers</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">Alley Girls</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">Game Changers</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">Bat Intentions</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">Put A Glove On It</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">One Hit Wonders</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+			<ul>
+				<li class="TeamName">Smackeroons</li>
+				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
+			</ul>
+		</div> <!-- #TeamList -->
+	</div> <!-- .container -->
+	<div id="trash"><span id="trashText">Suspended, quit, remove permanently</span></div>
     <!-- Load the CDN first -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- If CDN fails to load, serve up the local version -->
