--- a/league.html
+++ b/league.html
@@ -13,38 +13,43 @@
 <body>
 	<div class="container" id="LeagueWrapper">
 	<h1>  <i class="fas fa-sun"></i>   Sun Valley Softball League  <i class="fas fa-baseball-ball"></i></h1>
-		<div id="TeamList">
+		<div id="teamList">
 			<ul>
-				<li class="TeamName">Sluggers</li>
+				<li class="teamName">Sluggers</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">Alley Girls</li>
+				<li class="teamName">Alley Girls</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">Game Changers</li>
+				<li class="teamName">Game Changers</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">Bat Intentions</li>
+				<li class="teamName">Bat Intentions</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">Put A Glove On It</li>
+				<li class="teamName">Put A Glove On It</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">One Hit Wonders</li>
+				<li class="teamName">One Hit Wonders</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 			<ul>
-				<li class="TeamName">Smackeroons</li>
+				<li class="teamName">Smackeroons</li>
 				<li class="addPlayer"><input type="text" placeholder="add player name"></li>
 			</ul>
 		</div> <!-- #TeamList -->
 	</div> <!-- .container -->
-	<div id="trash"><span id="trashText">Suspended, quit, remove permanently</span></div>
+	<div id="trash" class="circle">
+		<span id="trashText">Remove permanently</span>
+		<span id="removedText">She's Out!</span>
+		<br>
+		<span><i class="fas fa-trash fa-lg"></i></span>
+	</div>
     <!-- Load the CDN first -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- If CDN fails to load, serve up the local version -->
